fix: improve readability of inline code block

--- a/css/everforest.scss
+++ b/css/everforest.scss
@@ -1,6 +1,3 @@
----
----
-
 /* 
 #2D353B  background
 #859289  comments / secondary content
@@ -13,9 +10,11 @@
 */
 
 .language-plaintext {
-  background-color: #2d353b;
-  color: #d3c6aa;
-  font-size: 80%;
+  background-color: rgba(45, 53, 59, 0.1);
+  color: #4a565d;
+  font-size: 90%;
+  padding: 0.15rem 0.35rem;
+  border-radius: 0.25rem;
 }
 
 .highlight {
